@@ -188,7 +188,7 @@ static double RedGamma = 1.0;
 static double GreenGamma = 1.0;
 static double BlueGamma = 1.0;
 
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
 #include "cairoFns.c"
 
 /************************/
@@ -373,7 +373,7 @@ static int Cairo_holdflush(pDevDesc dd, int level)
     }
     return xd->holdlevel;
 }
-#endif /* HAVE_WORKING_CAIRO */
+#endif /* HAVE_WORKING_X11_CAIRO */
 
 /************************/
 /* X11 Color Management */
@@ -797,7 +797,7 @@ static void handleEvent(XEvent event)
         pGEDevDesc gdd = desc2GEDesc(dd);
         if (gdd->dirty)
         {
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
             pX11Desc xd = (pX11Desc)dd->deviceSpecific;
             /* We can use the buffered copy where we have it */
             if (xd->buffered == 1)
@@ -832,7 +832,7 @@ static void handleEvent(XEvent event)
 
             xd->windowWidth = event.xconfigure.width;
             xd->windowHeight = event.xconfigure.height;
-#if defined HAVE_WORKING_CAIRO
+#if defined HAVE_WORKING_X11_CAIRO
             if (xd->useCairo)
             {
                 if (xd->buffered)
@@ -1531,7 +1531,7 @@ Rboolean X11_Open(pDevDesc dd, pX11Desc xd, const char *dsp, double w, double h,
         warning(_("ignoring 'display' argument as an X11 device is already open"));
     whitepixel = GetX11Pixel(R_RED(canvascolor), R_GREEN(canvascolor), R_BLUE(canvascolor));
     blackpixel = GetX11Pixel(0, 0, 0);
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
     if (xd->useCairo && Vclass != TrueColor)
     {
         warning(_("cairo-based types may only work correctly on TrueColor visuals"));
@@ -1690,7 +1690,7 @@ Rboolean X11_Open(pDevDesc dd, pX11Desc xd, const char *dsp, double w, double h,
             if (xd->type == WINDOW)
                 XDefineCursor(display, xd->window, arrow_cursor);
 
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
             if (xd->useCairo)
             {
                 cairo_status_t res;
@@ -2158,7 +2158,7 @@ static void X11_Close(pDevDesc dd)
 
     if (xd->type == WINDOW)
     {
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
         if (xd->buffered > 1)
             removeBuffering(xd);
 #endif
@@ -2167,7 +2167,7 @@ static void X11_Close(pDevDesc dd)
         inclose = TRUE;
         R_ProcessX11Events((void *)NULL);
 
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
         if (xd->useCairo)
         {
             CairoDestroyMasks(xd);
@@ -2640,7 +2640,7 @@ static Rboolean X11_Locator(double *x, double *y, pDevDesc dd)
 
     if (xd->type > WINDOW)
         return 0;
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
     if (xd->holdlevel > 0)
         error(_("attempt to use the locator after dev.hold()"));
     if (xd->buffered)
@@ -2844,7 +2844,7 @@ static void X11_Mode(int mode, pDevDesc dd)
     pX11Desc xd = (pX11Desc)dd->deviceSpecific;
     if (xd->holdlevel > 0)
     {
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
         if (mode == 0 && xd->buffered > 1)
             xd->last_activity = currentTime();
 #endif
@@ -2858,7 +2858,7 @@ static void X11_Mode(int mode, pDevDesc dd)
     }
     if (mode == 0)
     {
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
         if (xd->buffered > 1)
         {
             xd->last_activity = currentTime();
@@ -2928,7 +2928,7 @@ Rboolean X11DeviceDriver(pDevDesc dd, const char *disp_name, double width, doubl
     if (!xd)
         return FALSE;
     xd->bg = bgcolor;
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
     xd->useCairo = useCairo != 0;
     xd->buffered = 0;
     switch (useCairo)
@@ -3005,7 +3005,7 @@ Rboolean X11DeviceDriver(pDevDesc dd, const char *disp_name, double width, doubl
     strncpy(xd->title, title, 100);
     xd->title[100] = '\0';
 
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
     {
         SEXP timeouts = GetOption1(install("X11updates"));
         double tm = asReal(timeouts);
@@ -3039,7 +3039,7 @@ int Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
     int res0 = (xd->res_dpi > 0) ? xd->res_dpi : 72;
     /*	Set up Data Structures. */
 
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
     if (xd->useCairo)
     {
         dd->newPage = Cairo_NewPage;
@@ -3161,7 +3161,7 @@ int Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
         dd->ipr[0] = pixelWidth();
         dd->ipr[1] = pixelHeight();
         xd->lwdscale = 1.0 / (96.0 * pixelWidth());
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
         if (xd->useCairo)
         {
 #ifdef HAVE_PANGOCAIRO
@@ -3186,7 +3186,7 @@ int Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
     /* Device capabilities */
 
     dd->canClip = TRUE;
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
     dd->canHAdj = xd->useCairo ? 2 : 0;
 #else
     dd->canHAdj = 0;
@@ -3465,7 +3465,7 @@ static SEXP in_do_X11(SEXP call, SEXP op, SEXP args, SEXP env)
     return R_NilValue;
 }
 
-#ifdef HAVE_WORKING_CAIRO
+#ifdef HAVE_WORKING_X11_CAIRO
 static int stride;
 static unsigned int Sbitgp(void *xi, int x, int y)
 {
